<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/txt_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/txt_profile" />
        <item
            android:id="@+id/nav_user_activity"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/txt_user_activity" />
        <item
            android:id="@+id/nav_google_maps"
            android:icon="@drawable/ic_google_map"
            android:title="@string/txt_google_maps" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts"
            android:title="@string/txt_contacts" />
        <item
            android:id="@+id/nav_brodcast_receiver"
            android:icon="@drawable/ic_broadcast_receiver"
            android:title="@string/txt_broadcast_receiver" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/txt_logout" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
