<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/user_profile"
            app:civ_border_width="5dp"
            app:civ_border_color="#FFFFFF"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/edt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/edt_first_name" />

        <EditText
            android:id="@+id/edt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/edt_last_name" />

        <EditText
            android:id="@+id/edt_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/edt_email" />

        <EditText
            android:id="@+id/edt_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/edt_mobile_number"
            android:inputType="number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gender"
                android:textSize="18dp" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@id/radio_btn_male">

                <RadioButton
                    android:id="@+id/radio_btn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:text="@string/txt_male" />

                <RadioButton
                    android:id="@+id/radio_btn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_female" />

            </RadioGroup>
        </LinearLayout>

        <EditText
            android:id="@+id/edt_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/edt_password" />

        <EditText
            android:id="@+id/edt_signup_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/edt_confirm_password" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@color/colorButtonBackground"
            android:text="@string/txt_sign_up" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/txt_already_have_an_account" />

            <TextView
                android:id="@+id/txt_login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_login_now"
                android:textColor="@color/colorLinkText" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>