<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.ForgotPasswordActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_forgot_your_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:text="@string/txt_forgot_password"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_forgot_your_password"
                android:layout_marginTop="40sp"
                android:hint="@string/edt_enter_new_password" />

            <EditText
                android:id="@+id/edt_new_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_new_password"
                android:layout_marginTop="20dp"
                android:hint="@string/edt_confirm_password" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_new_confirm_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@color/colorButtonBackground"
                android:text="@string/txt_reset_password" />

        </RelativeLayout>

    </FrameLayout>
</ScrollView>